--- a/static/css/main.css
+++ b/static/css/main.css
@@ -523,7 +523,54 @@ input:-webkit-autofill:focus {
 }
 
 
+.spinner {
+    display: none;
+    margin: 2px auto 0;
+    width: 70px;
+    text-align: center;
+}
+.spinner.active {
+    display: block;
+}
 
+.spinner > div {
+    width: 10px;
+    height: 10px;
+    background-color: #fff;
+
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.form-control:focus > .spinner > div {background-color: #495057;}
+.form-control:hover > .spinner > div {background-color: #fff;}
+
+.spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0) }
+    40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+    0%, 80%, 100% {
+        -webkit-transform: scale(0);
+        transform: scale(0);
+    } 40% {
+          -webkit-transform: scale(1.0);
+          transform: scale(1.0);
+      }
+}
 
 
 @media only screen and (max-width: 991px) {
